--- a/app/src/main/res/menu/activity_nav_drawer_items.xml
+++ b/app/src/main/res/menu/activity_nav_drawer_items.xml
@@ -21,19 +21,31 @@
             android:id="@+id/nav_settings_id"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/dash_board_app_bar_items" />
+
+        <item
+            android:id="@+id/nav_payment_id"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Payment" />
+
     </group>
 
-    <!--<item android:title="Communicate">
+    <item android:title="Communicate">
         <menu>
+
             <item
+                android:id="@+id/nav_phone_admin_id"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Call Admin" />
+
+            <!--<item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Send" />-->
         </menu>
-    </item>-->
+    </item>
 
 </menu>
