--- a/app/src/main/res/layout/teacher_educational_info_layout.xml
+++ b/app/src/main/res/layout/teacher_educational_info_layout.xml
@@ -11,10 +11,10 @@
 
         <Button
             android:id="@+id/edit_education_info_btn_id"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:background="@drawable/ic_mode_edit_black_48dp"/>
+            android:text="Edit"/>
 
         <!--<LinearLayout
             android:layout_width="match_parent"
@@ -198,10 +198,10 @@
 
         <Button
             android:id="@+id/save_education_info_btn_id"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:background="@drawable/ic_save_black_48dp" />
+            android:text="SAVE"/>
 
     </LinearLayout>
 
