interest btn responsive

--- a/app/src/main/res/layout/job_feed_layout.xml
+++ b/app/src/main/res/layout/job_feed_layout.xml
@@ -272,6 +272,7 @@
                 android:text="7-Feb-2017" />
 
             <Button
+                android:id="@+id/interest_btn_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
