logout button modified.

--- a/app/src/main/res/menu/activity_nav_drawer_items.xml
+++ b/app/src/main/res/menu/activity_nav_drawer_items.xml
@@ -48,4 +48,15 @@
         </menu>
     </item>
 
+    <item android:title="">
+        <menu>
+
+            <item
+                android:id="@+id/nav_log_out_id"
+                android:icon="@drawable/exit_icon"
+                android:title="LOG OUT" />
+
+        </menu>
+    </item>
+
 </menu>
