--- a/app/src/main/res/layout/activity_nav_drawer_layout.xml
+++ b/app/src/main/res/layout/activity_nav_drawer_layout.xml
@@ -22,7 +22,9 @@
         app:headerLayout="@layout/header_nav_drawer"
         app:menu="@menu/activity_nav_drawer_items">
 
-        <Button
+
+
+        <!--<Button
             android:id="@+id/logoutBtn_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,7 +32,7 @@
             android:layout_margin="10dp"
             android:background="#D50000"
             android:onClick="onLogout"
-            android:text="@string/LogOut_Button" />
+            android:text="@string/LogOut_Button" />-->
 
     </android.support.design.widget.NavigationView>
 
