--- a/app/src/main/res/layout/teacher_educational_info_layout.xml
+++ b/app/src/main/res/layout/teacher_educational_info_layout.xml
@@ -13,6 +13,7 @@
             android:id="@+id/edit_education_info_btn_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#33b5e5"
             android:layout_gravity="right"
             android:text="Edit"/>
 
@@ -200,6 +201,7 @@
             android:id="@+id/save_education_info_btn_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00c851"
             android:layout_gravity="right"
             android:text="SAVE"/>
 
