--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="EASY TUITION"
+            android:text="@string/app_name"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:gravity="center"/>
 
