--- a/app/src/main/res/menu/activity_nav_drawer_items.xml
+++ b/app/src/main/res/menu/activity_nav_drawer_items.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_newsFeed_id"
             android:icon="@drawable/news_32"
-            android:title="News Feed" />
+            android:title="@string/latest_tuition" />
 
         <item
             android:id="@+id/nav_new_post_id"
@@ -24,7 +24,7 @@
 
         <item
             android:id="@+id/nav_payment_id"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/payment_icon"
             android:title="Payment" />
 
     </group>
