--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,12 +11,6 @@
         android:layout_weight="30"
         android:orientation="vertical">
 
-
-        <ProgressBar
-            android:id="@+id/login_progress_view_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -52,6 +46,12 @@
             android:hint="Password"
             android:textColorHint="@color/colorAccent"
             android:inputType="textPassword" />
+
+        <ProgressBar
+            android:id="@+id/login_progress_view_id"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/passwordEditText_id"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/loginBtn_id"
