--- a/app/src/main/res/layout/job_feed_layout.xml
+++ b/app/src/main/res/layout/job_feed_layout.xml
@@ -86,7 +86,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingRight="10dp"
-                android:paddingBottom="5dp"
                 android:paddingLeft="10dp">
 
                 <TextView
@@ -98,8 +97,7 @@
                 <TextView
                     android:id="@+id/preferred_medium_job_feed_id"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="5dp" />
+                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
@@ -107,7 +105,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp">
 
@@ -120,8 +117,7 @@
                 <TextView
                     android:id="@+id/class_of_student_job_feed_id"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="5dp" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -130,7 +126,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingRight="10dp"
-                android:paddingBottom="5dp"
                 android:paddingLeft="10dp">
 
 
@@ -152,7 +147,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingRight="10dp"
-                android:paddingBottom="5dp"
                 android:paddingLeft="10dp">
 
                 <TextView
@@ -164,8 +158,7 @@
                 <TextView
                     android:id="@+id/date_job_feed_id"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="5dp"/>
+                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
@@ -174,7 +167,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingRight="10dp"
-                android:paddingBottom="5dp"
                 android:paddingLeft="10dp">
 
                 <TextView
@@ -195,7 +187,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingRight="10dp"
-                android:paddingBottom="5dp"
                 android:paddingLeft="10dp">
 
                 <TextView
@@ -215,7 +206,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp">
 
