--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,27 +37,43 @@
             android:hint="Email"
             android:textColorHint="@color/colorAccent" />
 
-        <EditText
-            android:id="@+id/passwordEditText_id"
+        <LinearLayout
+            android:id="@+id/passwordEditText_linear_layout_id"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_below="@+id/usernameEditText_id"
-            android:layout_marginBottom="15dp"
-            android:hint="Password"
-            android:textColorHint="@color/colorAccent"
-            android:inputType="textPassword" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:passwordToggleEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:id="@+id/passwordEditText_id"
+                    android:layout_height="wrap_content"
+                    android:hint="password"
+                    android:textColorHint="@color/colorAccent"
+                    android:inputType="textPassword"/>
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+
+
 
         <ProgressBar
             android:id="@+id/login_progress_view_id"
             android:layout_width="match_parent"
-            android:layout_below="@+id/passwordEditText_id"
+            android:layout_below="@+id/passwordEditText_linear_layout_id"
             android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/loginBtn_id"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_below="@+id/passwordEditText_id"
+            android:layout_below="@+id/passwordEditText_linear_layout_id"
             android:text="Login"
             android:onClick="btnClicked"
             android:background="@drawable/ic_login_button"/>
